# master_multirobot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  framework.vsdx  package.xml
launch/: master_full.launch  multi_turtlebot_gazebo.launch
master_analysis/: CMakeLists.txt  package.xml
master_control/: position.xml
master_dis_map/: bresenham.py  distance_map.py  kalman_filter.py  master_generate_map.py  occupancy_map.py
master_launch/: CMakeLists.txt  config_exp.yaml  cross.sh  cross8.sh  goals.sh  package.xml  sustech_goal_exp.sh  sute.sh
master_mocap/: CMakeLists.txt  package.xml
master_msg/: CMakeLists.txt  README.md  package.xml
master_msgs/: CMakeLists.txt  README.md  msg_trans_turtlebot.cpp  msg_trans_turtlebot.h  package.xml  robot2msg.launch  robot2msg_plot.launch
master_msgs/msg/: anchor_frame0.msg  global_info.msg  multi_vel.msg  node1_t.msg  node2_t.msg  node_frame0.msg  node_frame2.msg  robot_state.msg  system_info.msg  tag_frame0.msg  tag_t.msg  tag_to_anchor_dis_t.msg
master_msgs/src/: msg2robot.cpp  msg2turtlebot.cpp  msg2turtlebot.h  robot2msg  turtlebot2msg  turtlebot2msg.py  uwb_msg_multi_callback.cpp  uwb_msg_multi_thread.cpp
master_planning/: readme.md
master_plot/: CMakeLists.txt  package.xml  setup.py
master_simulation/: CMakeLists.txt  package.xml
master_teleop/: CMakeLists.txt  README.md  package.xml
master_test/: test.py
mocap_optitrack/: CMakeLists.txt  package.xml
msg/: VelocityID.msg
record/: 1_3_1.0.bag  2019-09-17-22-52-35.bag  2019-09-17-22-56-44.bag  2019-09-18-21-20-26.bag  2_3_1.0.bag  a.bag  (+18 more)
(+166 files in other folders)
